Adapted to Java 24 upgrade.